Work from 20250219 in class

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,9 @@
 params {
 
     // Reads and references
+    reads = "/projectnb/bf528/materials/project-1-rnaseq/subsampled_files/*R{1,2}.subset.fastq.gz"
+    genome = "$projectDir/refs/GRCh38.primary_assembly.genome.fa"
+    gtf = "$projectDir/refs/gencode.v45.primary_assembly.annotation.gtf"
 
 
     // Directories
@@ -33,6 +36,11 @@ profiles {
                 withLabel: process_low {
                     cpus = 4
 
+                }
+
+                withLabel: process_high {
+                    cpus = 8
+                    clusterOptions = "-P bf528 -l mem_per_core=8G"
                 }
 
         }
