Up to STAR_INDEX working

--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,8 @@
 params {
 
     // Reads and references
-    reads = "/projectnb/bf528/materials/project-1-rnaseq/subsampled_files/*R{1,2}.subset.fastq.gz"
+    //reads = "/projectnb/bf528/materials/project-1-rnaseq/subsampled_files/*R{1,2}.subset.fastq.gz"
+    reads = "/projectnb/bf528/materials/project-1-rnaseq/full_files/*_{R1,R2}.fastq.gz"
     genome = "$projectDir/refs/GRCh38.primary_assembly.genome.fa"
     gtf = "$projectDir/refs/gencode.v45.primary_assembly.annotation.gtf"
 
@@ -61,4 +62,5 @@ executor {
     }
 }
 
+resume = true
 //Miscellaneous CLI flags
